# AlgoStartLato2015

./: ALGO.cpp  ALGO.h  CMakeLists.txt
Algo Start Lato 2015/: main.cpp
Algo Start Lato 2015.xcodeproj/: project.pbxproj
Algo Start Lato 2015.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Algo Start Lato 2015.xcodeproj/xcuserdata/Janusz.xcuserdatad/xcschemes/: Algo Start Lato 2015.xcscheme  xcschememanagement.plist
Nawiasy/: CMakeLists.txt  Nawiasy.cpp
ScalanieWieluList/: CMakeLists.txt  NodeHeap.h  ScalanieList.cpp  main.cpp  scalanieWieluList.h
ScalanieWieluListTest/: CMakeLists.txt  ScalanieListTest.cpp  ScalanieListTest.h
ScalanieZbiorow/: CMakeLists.txt  ScalanieZbiorow.cpp
